@@ -111,9 +111,7 @@ public class DeleteRoleAssignmentOrchestrator {
             requestedRoles.stream().forEach(roleAssignment -> roleAssignment.setStatus(Status.DELETE_REQUESTED));
         }
 
-        ResponseEntity<Void> responseEntity = performOtherStepsForDelete("", requestedRoles);
-
-        return responseEntity;
+        return performOtherStepsForDelete("", requestedRoles);
     }
 
     @Transactional
@@ -204,7 +202,7 @@ public class DeleteRoleAssignmentOrchestrator {
 
         List<RoleAssignment> deleteApprovedRoles = validatedAssignmentRequest.getRequestedRoles().stream()
             .filter(role -> role.getStatus()
-                .equals(Status.DELETE_APPROVED)).collect(Collectors.toList());
+                .equals(Status.DELETE_APPROVED)).toList();
 
         if (!deleteApprovedRoles.isEmpty()
             && deleteApprovedRoles.size() == validatedAssignmentRequest.getRequestedRoles().size()) {
@@ -221,8 +219,7 @@ public class DeleteRoleAssignmentOrchestrator {
         } else {
             //Insert requested roles  into history table with status deleted-Rejected
             List<RoleAssignment> deleteApprovedRecords = validatedAssignmentRequest.getRequestedRoles().stream()
-                .filter(role -> role.getStatus() == Status.DELETE_APPROVED).collect(
-                    Collectors.toList());
+                .filter(role -> role.getStatus() == Status.DELETE_APPROVED).toList();
             validatedAssignmentRequest.setRequestedRoles(deleteApprovedRecords);
             insertRequestedRole(validatedAssignmentRequest, Status.DELETE_REJECTED);
 
@@ -350,7 +347,7 @@ public class DeleteRoleAssignmentOrchestrator {
             ));
 
         }
-        return assignmentRecords.stream().flatMap(Collection::stream).collect(Collectors.toList());
+        return assignmentRecords.stream().flatMap(Collection::stream).toList();
     }
 
 
